# pngarch

./: ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  datpng.c  datpng.h  decode.c  encode.c  pngarch.c  test.c
doc/: Makefile.am  README  datpng.texi  pngarch.1  pngarch.texi  pngarch_extra.txt
www/: index.html  right-to-read.txt
www/files/: files.md5  pngarch-0.1.tar.gz.md5  pngarch-0.1.tar.gz.png.md5
